--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -260,5 +260,6 @@
   "Monto maximo a retirar": "Maximum amount to withdraw",
   "Gastos de fondo según reglamento de inversión": "Fund expenses according to investment regulations",
   "Retención de impuestos (SUNAT)": "Tax withholding (SUNAT)",
-  "Disponible efectivo": "Cash available"
+  "Disponible efectivo": "Cash available",
+  "Jurisdiccion": "Jurisdição"
 }
