--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -263,5 +263,6 @@
   "Monto maximo a retirar": "Monto maximo a retirar",
   "Gastos de fondo según reglamento de inversión": "Gastos de fondo según reglamento de inversión",
   "Retención de impuestos (SUNAT)": "Retención de impuestos (SUNAT)",
-  "Disponible efectivo": "Disponible efectivo"
+  "Disponible efectivo": "Disponible efectivo",
+  "Jurisdiccion": "Jurisdicción"
 }
