--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -260,5 +260,6 @@
   "Monto maximo a retirar": "Quantidade máxima para sacar",
   "Gastos de fondo según reglamento de inversión": "Despesas do fundo de acordo com os regulamentos de investimento",
   "Retención de impuestos (SUNAT)": "Retenção de impostos (SUNAT)",
-  "Disponible efectivo": "Dinheiro disponível"
+  "Disponible efectivo": "Dinheiro disponível",
+  "Jurisdiccion": "Jurisdiccion"
 }
